--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -25,7 +25,7 @@ a:focus {
 
 .navbar {
     padding: 15px 10px;
-    background: #fff;
+    background: #555;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
@@ -55,24 +55,24 @@ a:focus {
 }
 
 #sidebar {
-    width: 250px;
+    width: 280px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
-    color: #fff;
+    background: #E2E2E2;
+    color: #555;
     transition: all 0.3s;
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -280px;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #E2E2E2;
 }
 
 #sidebar ul.components {
@@ -81,7 +81,7 @@ a:focus {
 }
 
 #sidebar ul p {
-    color: #fff;
+    color: #555;
     padding: 10px;
 }
 
@@ -92,14 +92,14 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: #E2E2E2;
+    background: #555;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+    color: #555;
+    background: #E2E2E2;
 }
 
 a[data-toggle="collapse"] {
@@ -117,7 +117,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #E2E2E2;
 }
 
 ul.CTAs {
@@ -133,14 +133,14 @@ ul.CTAs a {
 }
 
 a.download {
-    background: #fff;
-    color: #7386D5;
+    background: #555;
+    color: #E2E2E2;
 }
 
 a.article,
 a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
+    background: #E2E2E2 !important;
+    color: #555 !important;
 }
 
 /* ---------------------------------------------------
@@ -148,7 +148,7 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-    width: calc(100% - 250px);
+    width: calc(100% - 280px);
     padding: 40px;
     min-height: 100vh;
     transition: all 0.3s;
@@ -167,7 +167,7 @@ a.article:hover {
 
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: -280px;
     }
     #sidebar.active {
         margin-left: 0;
@@ -176,9 +176,15 @@ a.article:hover {
         width: 100%;
     }
     #content.active {
-        width: calc(100% - 250px);
+        width: calc(100% - 280px);
     }
     #sidebarCollapse span {
         display: none;
     }
+}
+
+.sidebar-logo{
+	background: url("/s/img/b2w-logo.png") no-repeat top left;
+	width: 240px;
+	height: 140px;
 }
