--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,11 +1,5 @@
 </body>
 </html>
-<footer style="text-align: center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p class="copyright text-muted small">Copyright &copy; Beyond 2 Wheels. All Rights Reserved</p>
-            </div>
-        </div>
-    </div>
+<footer class="b2w-footer">
+    <div class="copyright text-muted small">Copyright &copy; Beyond 2 Wheels. All Rights Reserved</div>
 </footer>
