--- a/src/views/cargo.html
+++ b/src/views/cargo.html
@@ -8,16 +8,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Page</a>
+                        <a class="nav-link" href="#">Query or Add</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Page</a>
+                        <a class="nav-link" href="#">Modify</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Page</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Page</a>
+                        <a class="nav-link" href="#">Delete</a>
                     </li>
                 </ul>
             </div>
@@ -64,4 +61,3 @@
         laborum.</p>
 </div>
 <%include file="footer.html" />
-
