--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -20,7 +20,7 @@ a:hover,
 a:focus {
     color: inherit;
     text-decoration: none;
-    transition: all 0.3s;
+    transition: all 0.3s ease;
 }
 
 .navbar {
@@ -49,11 +49,12 @@ a:focus {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
-.wrapper {
+.sidebar-wrapper {
     display: flex;
-    width: 280px;
+    width: 250px;
     float: left;
     align-items: stretch;
+    transition: all 0.3s ease;
 }
 
 #sidebar {
@@ -61,15 +62,16 @@ a:focus {
     max-width: 250px;
     background: #E2E2E2;
     color: #555;
-    transition: all 0.3s;
+    transition: all 0.3s ease;
 }
 
-#sidebar.active {
+#sidebar-wrapper.active {
     margin-left: -250px;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
+    margin: 0 auto;
 }
 
 #sidebar ul.components {
@@ -100,6 +102,10 @@ a[aria-expanded="true"] {
 }
 
 a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[data-toggle="collapse2"] {
     position: relative;
 }
 
@@ -141,27 +147,15 @@ a.article:hover {
 }
 
 /* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-    width: calc(100% - 280px);
-    float: right;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
-}
-
-/* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
-    #sidebar {
+    #sidebar-wrapper {
         margin-left: -250px;
     }
 
-    #sidebar.active {
+    #sidebar-wrapper.active {
         margin-left: 0;
     }
 
