--- a/src/views/base.html
+++ b/src/views/base.html
@@ -12,8 +12,9 @@
     <title>${page_title}</title>
 
     <link href="/s/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/s/css/sidebar.css">
     <link href="/s/css/base.css" rel="stylesheet">
+    <link href="/s/css/sidebar.css" rel="stylesheet">
+    <link href="/s/css/top-info.css" rel="stylesheet">
     <!-- jQuery -->
     <script src="/s/js/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap JS -->
@@ -21,3 +22,4 @@
 </head>
 <body>
 <%include file="sidebar.html" />
+<%include file="topinfo.html" />
