Add handsontable support

--- a/src/views/base.html
+++ b/src/views/base.html
@@ -12,6 +12,7 @@
     <title>${page_title}</title>
 
     <link href="/s/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/s/css/handsontable.full.min.css" rel="stylesheet">
     <link href="/s/css/base.css" rel="stylesheet">
     <link href="/s/css/sidebar.css" rel="stylesheet">
     <link href="/s/css/top-info.css" rel="stylesheet">
@@ -19,6 +20,8 @@
     <script src="/s/js/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="/s/js/bootstrap.min.js"></script>
+    <!-- Handsontable JS -->
+    <script src="/s/js/handsontable.full.min.js"></script>
 </head>
 <body>
 <%include file="sidebar.html" />
