--- a/src/views/cargo.html
+++ b/src/views/cargo.html
@@ -22,6 +22,7 @@
     </nav>
 
     <h2>Collapsible Sidebar Using Bootstrap 4</h2>
+    <div id="display-table" class="display-table"></div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -60,4 +61,25 @@
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum.</p>
 </div>
+<script>
+    var container = document.getElementById('display-table');
+    var hot = new Handsontable(container, {
+        data: JSON.parse('${values}'),
+        rowHeaders: false,
+		colHeaders: true,
+		colHeaders: JSON.parse('${headers}'),
+		rowHeight: function (row) {
+		  return 60;
+		},
+		defaultRowHeight: 60,
+		autoColumnSize: {syncLimit: '40%'},
+		// filters: true,
+        // columnSorting: true,
+        // sortIndicator: true,
+		trimWhitespace: false,
+		className: "htMiddle",
+		stretchH: 'all',
+        readOnly: true,
+    });
+</script>
 <%include file="footer.html" />
