--- a/src/views/base.html
+++ b/src/views/base.html
@@ -12,17 +12,24 @@
     <title>${page_title}</title>
 
     <link href="/s/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/s/css/bootstrap-multiselect.css" rel="stylesheet">
     <link href="/s/css/handsontable.full.min.css" rel="stylesheet">
     <link href="/s/css/base.css" rel="stylesheet">
     <link href="/s/css/sidebar.css" rel="stylesheet">
     <link href="/s/css/top-info.css" rel="stylesheet">
+    <link href="/s/css/pop-up.css" rel="stylesheet">
     <!-- jQuery -->
     <script src="/s/js/jquery-3.3.1.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
     <script src="/s/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Select JS -->
+    <script src="/s/js/bootstrap-multiselect.js"></script>
     <!-- Handsontable JS -->
     <script src="/s/js/handsontable.full.min.js"></script>
 </head>
 <body>
 <%include file="sidebar.html" />
+<%include file="pop_up.html" />
 <%include file="topinfo.html" />
